<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
            android:id="@+id/thumbnail"
            android:layout_width="@dimen/image_width"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/marginNormal"
            android:layout_marginEnd="@dimen/marginMini"
            android:layout_marginTop="@dimen/marginNormal"
            android:contentDescription="@string/photos_ct"
            android:scaleType="centerCrop"
            tools:background="@color/photo_placeholder" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/marginNormal">

            <TextView
                android:id="@+id/article_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginSmall"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/primaryDarkText"
                tools:text="@string/title_placeholder" />

            <TextView
                android:id="@+id/article_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/secondaryDarkText"
                tools:text="@string/text_placeholder" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/marginSmall"
                android:layout_marginTop="@dimen/marginSmall"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"
                tools:text="@string/date_placeholder" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
